# jupyter-mimetypes

./: .gitignore  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: build.yml
jupyter_reprs/: __init__.py  common.py  pandas.py
jupyter_reprs/tests/: __init__.py  test_pandas.py
tests/: conftest.py
tests/jupyter_mimetypes/: test_api.py  test_proxy.py  test_utils.py
tests/jupyter_mimetypes/_io/: __init__.py  test_api.py  test_pandas.py  test_pickle.py
