# Copyright (c) 2023-2024 Datalayer, Inc.
#
# BSD 3-Clause License

[build-system]
requires = ["hatchling~=1.21"]
build-backend = "hatchling.build"

[project]
name = "jupyter-mimetypes"
authors = [{ name = "Datalayer", email = "info@datalayer.io" }]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["Jupyter"]
classifiers = [
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Framework :: Jupyter",
]
dependencies = ["pyarrow"]

[project.optional-dependencies]
test = [
  "ipykernel",
  "jupyter-kernel-client",
  "jupyter-server", "pandas",
  "pytest>=7.0",
  "pytest-cov",
  "pytest-timeout",
  "pandas",
  "pandas-stubs",
  "pyarrow-stubs",
  "torch>=2.0",
]
lint = [
  "pre_commit",
  "mdformat>0.7",
  "mdformat-gfm>=0.3.5",
  "ruff",
]
typing = [
  "mypy>=0.990",
]

[project.license]
file = "LICENSE"

[project.urls]
Home = "https://github.com/datalayer/jupyter-mimetypes"

[tool.hatch.version]
path = "jupyter_mimetypes/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_mimetypes"]

[tool.pytest.ini_options]
filterwarnings = [
  "error",
  "ignore:There is no current event loop:DeprecationWarning",
  "module:make_current is deprecated:DeprecationWarning",
  "module:clear_current is deprecated:DeprecationWarning",
  "module:Jupyter is migrating its paths to use standard platformdirs:DeprecationWarning",
]
timeout=60

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
pretty = true
show_error_context = true
show_error_codes = true
strict_equality = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C",
  "E",
  "F",
  "FBT",
  "I",
  "N",
  "Q",
  "RUF",
  "S",
  "T",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # FBT001 Boolean positional arg in function definition
  "FBT001",
  "FBT002",
  "FBT003",
  # C901 `foo` is too complex (12)
  "C901",
  # UP007 Use `X | Y` for type annotations (not compatible with Python 3.9)
  "UP007",
]

[tool.ruff.lint.per-file-ignores]
# S101 Use of `assert` detected
"tests/*" = ["S101", "T201", "S603", "S607"]
